<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CaddyScan</string>
    <string name="empty_list_message">Aucun produit scanné\nAppuyez sur le bouton pour commencer</string>
    <string name="placez_le_code_barres_dans_le_cadre">Placez le code-barres dans le cadre</string>
    <string name="scanner_un_code_barres">Scanner un code-barres</string>
    <string name="tout_supprimer">Tout supprimer</string>
    <string name="exporter_la_liste">Exporter la liste</string>
    <string name="importer_une_sauvegarde">Importer la liste</string>
    <string name="logo_svpro">Logo SVPRO</string>
    <string name="samuel_vermeulen_svpro">Samuel Vermeulen</string>
    <string name="consultant_informatique_amp_internet"><![CDATA[Consultant Informatique & Internet]]></string>
    <string name="licence">LICENCE</string>
    <string name="gnu_affero_general_public_license_v3_0">GNU Affero General Public License v3.0</string>
    <string name="comment_licence">Ce logiciel est distribué sous licence libre AGPL-3.0. Le code source doit rester accessible à tous les utilisateurs, y compris en cas de déploiement réseau.</string>
    <string name="consulter_la_licence">Consulter la licence AGPL-3.0 →</string>
    <string name="biblioth_ques_open_source">BIBLIOTHÈQUES OPEN SOURCE</string>
    <string name="open_food_facts_api">Open Food Facts API</string>
    <string name="base_de_donn_es_collaborative_de_produits_alimentaires_odbl">Base de données collaborative de produits alimentaires — ODbL</string>
    <string name="androidx_camerax">AndroidX CameraX 1.3.1</string>
    <string name="menu_about">À propos</string>
    <string name="ic_edit">Modifier</string>
    <string name="ic_delete">Supprimer</string>
    <string name="add_code_barres">CODE-BARRES</string>
    <string name="add_example_cb">EAN-13, QR, UPC…</string>
    <string name="add_scanner_cb">Scanner le code-barres</string>
    <string name="ajouter_un_produit">Ajouter un produit manuellement</string>
</resources>
