<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/ajouter_un_produit"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_export"
        android:title="@string/exporter_la_liste"
        android:icon="@drawable/ic_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/importer_une_sauvegarde"
        android:icon="@drawable/ic_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/tout_supprimer"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />

</menu>
